--- a/index.html
+++ b/index.html
@@ -15,25 +15,25 @@
             <a href="index.html" id="logo"><img src="img/logo.png" alt="Logo Website"></a>
             <ul>
                 <li>
-                    <a href="#">HOME</a>
+                    <a href="index.html">HOME</a>
                     <!-- <ul>
                         <li><a href="#">HOME1</a></li>
                         <li><a href="#">HOME2</a></li>
                     </ul> -->
                 </li>
-                <li><a href="#">ABOUT US</a></li>
-                <li><a href="#">VEHICLES</a></li>
-                <li><a href="#">RENTALS</a></li>
+                <li><a href="#about">ABOUT US</a></li>
+                <li><a href="#carslist">VEHICLES</a></li>
+                <li><a href="#rentals">RENTALS</a></li>
             </ul>
-            <a href="#">CONTAC US</a>
+            <a href="#contacto">CONTAC US</a>
             
         </nav>
 
         <div id="cont-menu-mobile">
-            <a href="">HOME</a>
-            <a href="">ABOUT US</a>
-            <a href="">VEHICLES</a>
-            <a href="">RENTALS</a>
+            <a href="index.html">HOME</a>
+            <a href="#about">ABOUT US</a>
+            <a href="#carslist">VEHICLES</a>
+            <a href="#rentals">RENTALS</a>
         </div>
 
         <nav class="mobile">
@@ -387,7 +387,7 @@
         <button>Discover More Blog</button>
        </section>
     </main>
-    <footer>
+    <footer id="contacto">
         <div class="fila">
             <div class="col-footer texto">
                 <a href="#"><img src="img/Logo-w.png" alt="LOGO"></a>
