--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
         <section id="rentals">
 
             <h3>WHY CHOSE US</h3>
-            <h2>PROVIDING RELIABLE <br> CAR RENTAILS</h2>
+            <h2>PROVIDING RELIABLE <br> CAR RENTALS</h2>
 
             <div class="cont-vehiculo">
                 <img src="img/Image.png" alt="4x4">
